사용자 전체조회를 추가하고 테스트를 리팩토링하하라
사용자 전체조회 기능을 추가하고, 테스트를 작성한다. 조회의
반환형이 변경된 것에 따라서 전체적으로 테스트를 리팩토링한다.